--- a/Heart_disease_prediction_and_compared_using_5_algorithms.ipynb
+++ b/Heart_disease_prediction_and_compared_using_5_algorithms.ipynb
@@ -1212,7 +1212,7 @@
       "cell_type": "code",
       "source": [
         "#accuracy on training \n",
-        "X_train_prediction = model.predict(X_train)\n",
+        "X_train_prediction = lr.predict(X_train)\n",
         "training_data_accuracy = accuracy_score(X_train_prediction, Y_train)\n",
         "print('Accuracy on Training Data:', training_data_accuracy)"
       ],
@@ -1238,7 +1238,7 @@
       "cell_type": "code",
       "source": [
         "#accuracy on testing\n",
-        "X_test_prediction = model.predict(X_test)\n",
+        "X_test_prediction = lr.predict(X_test)\n",
         "testing_data_accuracy = accuracy_score(X_test_prediction, Y_test)\n",
         "print('Accuracy on Testing Data:', testing_data_accuracy)"
       ],
